<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    >
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/Home"
            android:icon="@drawable/home"
            android:title="Home" />
        <item
            android:id="@+id/CNM"
            android:icon="@drawable/location"
            android:title="@string/CNM" />
        <item
            android:id="@+id/PreFil"
            android:icon="@drawable/prefered_film"
            android:title="@string/PF" />
        <item
            android:id="@+id/WP"
            android:icon="@drawable/wifi"
            android:title="@string/WP" />
        <item
            android:id="@+id/Notifit"
            android:icon="@drawable/notification"
            android:title="@string/Notifi" />
        <item
            android:id="@+id/AboutUs"
            android:icon="@drawable/about_us"
            android:title="@string/AU" />
        <item
            android:id="@+id/LO"
            android:icon="@drawable/log_out"
            android:title="@string/LO" />
    </group>
</menu>